<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingEnd="8dp"
    android:paddingVertical="16dp"
    android:gravity="center_vertical"
    android:background="@drawable/rounded_background"
    android:elevation="4dp"
    android:layout_margin="4dp"
    android:layout_marginBottom="8dp"
    tools:ignore="RtlSymmetry">

    <TextView
        android:id="@+id/tvNoteHeading"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/note_heading"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_marginEnd="2dp" />

    <ImageView
        android:id="@+id/ivEdit"
        android:layout_width="38dp"
        android:layout_height="48dp"
        android:src="@drawable/ic_edit"
        android:contentDescription="@string/edit_note"
        android:padding="4dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:scaleType="centerInside" />


    <ImageView
        android:id="@+id/ivDelete"
        android:layout_width="30dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_delete"
        android:contentDescription="@string/delete_note"
        android:padding="4dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:scaleType="centerInside" />

</LinearLayout>
