<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/purpose"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/purpose_text"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/feature"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculator"
                android:textSize="24sp"
                android:layout_marginLeft="10dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/calculatorExplanation"
                android:textColor="@color/black"
                android:layout_marginTop="-2dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="30dp"
                android:layout_marginRight="5dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tip"
                android:textSize="24sp"
                android:layout_marginLeft="10dp"
                android:textColor="@color/black"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/tipExplanation"
                android:textColor="@color/black"
                android:layout_marginTop="-2dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="30dp"
                android:layout_marginRight="5dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/note"
                android:textSize="24sp"
                android:layout_marginLeft="10dp"
                android:textColor="@color/black"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/noteExplanation"
                android:textColor="@color/black"
                android:layout_marginTop="-2dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="30dp"
                android:layout_marginRight="5dp"
                />
        </LinearLayout>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="User Benefits"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Efficiency"
                android:textSize="24sp"
                android:layout_marginLeft="10dp"
                android:textColor="@color/black"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/efficiencyText"
                android:textColor="@color/black"
                android:layout_marginTop="-2dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="30dp"
                android:layout_marginRight="5dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Convenience"
                android:textSize="24sp"
                android:layout_marginLeft="10dp"
                android:textColor="@color/black"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/convenienceText"
                android:textColor="@color/black"
                android:layout_marginTop="-2dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="30dp"
                android:layout_marginRight="5dp"
                />
        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Contact Details"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="-5dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Name : "
                android:textSize="24sp"
                android:layout_marginLeft="10dp"
                android:textColor="@color/black"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="Abdul Moid"
                android:textColor="@color/black"
                android:layout_marginTop="-2dp"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="30dp"
                android:layout_marginRight="5dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="-15dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Email : "
                android:textSize="24sp"
                android:layout_marginLeft="10dp"
                android:textColor="@color/black"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="khanmoid7398@gmail.com"
                android:textColor="@color/black"
                android:layout_marginTop="-2dp"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="30dp"
                android:layout_marginRight="5dp"
                />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Made With ❤️ By Abdul Moid"
            android:textSize="30sp"
            android:layout_marginBottom="10dp"
            android:textAlignment="center"
            android:background="@color/tipCalculator"
            android:textColor="@color/black"
            android:paddingVertical="10dp"
            />
    </LinearLayout>
</ScrollView>
