<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/white"
    >

    <LinearLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentTop="true">

        <EditText
            android:id="@+id/etHeading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/enter_heading"
            android:textSize="20sp"
            android:background="@drawable/rounded_edittext"
            android:padding="12dp"
            android:inputType="textCapSentences"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            tools:ignore="Autofill" />


        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:paddingHorizontal="16dp"
            android:paddingVertical="6dp"
            android:paddingTop="0dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:background="@drawable/rounded_edittext"
            android:elevation="4dp"
            android:layout_marginStart="8dp" />
    </LinearLayout>

    <EditText
        android:id="@+id/etContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/headerLayout"
        android:layout_marginTop="16dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:hint="@string/enter_content"
        android:gravity="top"
        android:background="@drawable/rounded_edittext"
        android:padding="12dp"
        android:inputType="textMultiLine|textCapSentences"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        tools:ignore="Autofill" />

</RelativeLayout>
